--- a/scss/moebootstrap.css
+++ b/scss/moebootstrap.css
@@ -6416,4 +6416,10 @@ body {
 .margin-right-32 {
   margin-right: 32px; }
 
+.padding-bottom-60 {
+  padding-bottom: 64px; }
+
+.padding-bottom-200 {
+  padding-bottom: px; }
+
 /*# sourceMappingURL=moebootstrap.css.map */
