--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -62,3 +62,9 @@ body {
 .margin-right-32 {
     margin-right: 32px;
 }
+.padding-bottom-60 {
+    padding-bottom: 64px;
+}
+.padding-bottom-200 {
+    padding-bottom: 192px;
+}
