--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -42,6 +42,9 @@ body {
 .large {
     font-size: 48px !important;
 }
+.small {
+     font-size: 12px !important;
+ }
 .material-icons {
     -khtml-user-select: none;
     -o-user-select: none;
@@ -54,6 +57,10 @@ body {
     box-shadow:none !important;
     border-color:transparent !important;
     cursor: pointer;
+
+}
+.mouse-pointer {
+    cursor: pointer;
 }
 .padding-top-bottom {
     padding-top: 16px;
@@ -65,6 +72,39 @@ body {
 .padding-bottom-60 {
     padding-bottom: 64px;
 }
+.padding-bottom-30 {
+    padding-bottom: 32px;
+}
 .padding-bottom-200 {
     padding-bottom: 192px;
+}
+.padding-right-left-16 {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+.padding-bottom-10 {
+    padding-bottom: 12px;
+}
+.main-content {
+    opacity: 0;
+}
+.subtitle {
+    opacity: 0;
+}
+.hidden-panel {
+    opacity: 0;
+    display: none !important;
+}
+input.weektitle {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: inherit;
+}
+.hovering-shadow-large {
+    box-shadow: 10px 10px 2px darkgreen;
+}
+.hovering-shadow-small {
+    box-shadow: 5px 2px 2px darkgreen;
 }
