--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -75,8 +75,8 @@ body {
 .padding-bottom-30 {
     padding-bottom: 32px;
 }
-.padding-bottom-200 {
-    padding-bottom: 192px;
+.padding-bottom-400 {
+    padding-bottom: 384px;
 }
 .padding-right-left-16 {
     padding-left: 16px;
@@ -84,6 +84,9 @@ body {
 }
 .padding-bottom-10 {
     padding-bottom: 12px;
+}
+.margin-bottom-20 {
+    margin-bottom: 24px;
 }
 .main-content {
     opacity: 0;
@@ -107,4 +110,16 @@ input.weektitle {
 }
 .hovering-shadow-small {
     box-shadow: 5px 2px 2px darkgreen;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: $dark-green;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: $dark-green;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: $dark-green;
 }
