--- a/scss/moebootstrap.css
+++ b/scss/moebootstrap.css
@@ -6396,6 +6396,9 @@ body {
 .large {
   font-size: 48px !important; }
 
+.medium {
+  font-size: 24px !important; }
+
 .small {
   font-size: 12px !important; }
 
