--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -42,6 +42,9 @@ body {
 .large {
     font-size: 48px !important;
 }
+.medium {
+     font-size: 24px !important;
+ }
 .small {
      font-size: 12px !important;
  }
