completed register, added course adder

--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -38,7 +38,7 @@ $blue:    #1565C0 !default;
 $indigo:  #3F51B5 !default;
 $purple:  #673AB7 !default;
 $pink:    #e83e8c !default;
-$red:     #C62828 !default;
+$red:     #D50000 !default;
 $orange:  #FF9800 !default;
 $yellow:  #FFEB3B !default;
 $teal:    #009688 !default;
