--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -126,3 +126,6 @@ input.weektitle {
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: $dark-green;
 }
+.margin-top-none {
+    margin-top: 0px !important;
+}
