--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -129,3 +129,36 @@ input.weektitle {
 .margin-top-none {
     margin-top: 0px !important;
 }
+.text-icon {
+    display: inline-block;
+    width: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%; }
+.padding-top-5 {
+    padding-top: 4px;
+}
+.padding-bottom-5 {
+    padding-bottom: 4px;
+}
+.document {
+    min-height: 65vh;
+}
+.paper {
+    font-family: 'Roboto', sans-serif;
+    padding: 45px 30px 27px;
+    position: relative;
+    border: 1px solid #B5B5B5;
+}
+.paper::after {content:''; position:absolute; width:0px; top:0; left:39px; bottom:0; border-left:2px solid #F8D3D3;}
+.margin-none {
+    margin: 0px !important;
+}
+.padding-right-none {
+    padding-right: 0px !important;
+}
+.margin-right-5 {
+margin-right: 4px;
+}
+
