--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/bootstrap";
 
+
 body {
     color: #000;
     background-color: #f4f4f4;
@@ -48,6 +49,9 @@ body {
 .small {
      font-size: 12px !important;
  }
+.xsmall {
+    font-size: 9px !important;
+}
 .material-icons {
     -khtml-user-select: none;
     -o-user-select: none;
@@ -143,7 +147,8 @@ input.weektitle {
     padding-bottom: 4px;
 }
 .document {
-    min-height: 65vh;
+    opacity: 0;
+    min-height: 67vh;
 }
 .paper {
     font-family: 'Roboto', sans-serif;
@@ -161,4 +166,21 @@ input.weektitle {
 .margin-right-5 {
 margin-right: 4px;
 }
+.margin-bottom-0 {
+    margin-bottom: 0px !important;
+}
+.opacity-none {
+    opacity: 0;
+}
+.initial-fade-in {
+    padding-left: 45px;
+    opacity: 0;
+}
+textarea.enter-notes::-webkit-input-placeholder {
+    color: $white;
+}
+nav#active {
+    opacity: 0;
+}
+
 
