--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -73,6 +73,10 @@ body {
     padding-top: 16px;
     padding-bottom: 16px;
 }
+.padding-top-bottom-60 {
+    padding-top: 64px;
+    padding-bottom: 66px;
+}
 .margin-right-32 {
     margin-right: 32px;
 }
@@ -182,5 +186,11 @@ textarea.enter-notes::-webkit-input-placeholder {
 nav#active {
     opacity: 0;
 }
+textarea{
+    display: block;
+    overflow: hidden;
+    min-height: 10vh;
+}
+form.dropzone {
 
-
+}
