--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -154,13 +154,13 @@ input.weektitle {
     opacity: 0;
     min-height: 67vh;
 }
-.paper {
-    font-family: 'Roboto', sans-serif;
-    padding: 45px 30px 27px;
-    position: relative;
-    border: 1px solid #B5B5B5;
-}
-.paper::after {content:''; position:absolute; width:0px; top:0; left:39px; bottom:0; border-left:2px solid #F8D3D3;}
+//.paper {
+//    font-family: 'Roboto', sans-serif;
+//    padding: 45px 30px 27px;
+//    position: relative;
+//    border: 1px solid #B5B5B5;
+//}
+//.paper::after {content:''; position:absolute; width:0px; top:0; left:39px; bottom:0; border-left:2px solid #F8D3D3;}
 .margin-none {
     margin: 0px !important;
 }
@@ -181,7 +181,7 @@ margin-right: 4px;
     opacity: 0;
 }
 textarea.enter-notes::-webkit-input-placeholder {
-    color: $white;
+    color: $dark-green;
 }
 nav#active {
     opacity: 0;
@@ -191,6 +191,6 @@ textarea{
     overflow: hidden;
     min-height: 10vh;
 }
-form.dropzone {
-
+.not-ubuntu {
+    font-family: 'Roboto', sans-serif;
 }
