--- a/scss/moebootstrap.css
+++ b/scss/moebootstrap.css
@@ -6509,21 +6509,6 @@ input.weektitle {
   opacity: 0;
   min-height: 67vh; }
 
-.paper {
-  font-family: 'Roboto', sans-serif;
-  padding: 45px 30px 27px;
-  position: relative;
-  border: 1px solid #B5B5B5; }
-
-.paper::after {
-  content: '';
-  position: absolute;
-  width: 0px;
-  top: 0;
-  left: 39px;
-  bottom: 0;
-  border-left: 2px solid #F8D3D3; }
-
 .margin-none {
   margin: 0px !important; }
 
@@ -6544,7 +6529,7 @@ input.weektitle {
   opacity: 0; }
 
 textarea.enter-notes::-webkit-input-placeholder {
-  color: #fff; }
+  color: #2E7D32; }
 
 nav#active {
   opacity: 0; }
@@ -6553,5 +6538,8 @@ textarea {
   display: block;
   overflow: hidden;
   min-height: 10vh; }
+
+.not-ubuntu {
+  font-family: 'Roboto', sans-serif; }
 
 /*# sourceMappingURL=moebootstrap.css.map */
