--- a/scss/moebootstrap.scss
+++ b/scss/moebootstrap.scss
@@ -64,7 +64,9 @@ body {
     box-shadow:none !important;
     border-color:transparent !important;
     cursor: pointer;
-
+}
+.no-select a {
+    text-decoration: none;
 }
 .mouse-pointer {
     cursor: pointer;
